--- a/MathBomb/res/layout/activity_highscore.xml
+++ b/MathBomb/res/layout/activity_highscore.xml
@@ -6,13 +6,14 @@
     android:orientation="vertical" >
     
     <TextView
-        android:paddingTop="30dp"
+        android:paddingTop="100dp"
         android:paddingBottom="30dp"
         android:layout_gravity="center"
         android:id="@+id/highscoreshow"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="30dp"
+        android:textStyle="bold"
         android:text="@string/highscoretitle" />   
     
     <LinearLayout
