--- a/MathBomb/res/layout/activity_listcategory.xml
+++ b/MathBomb/res/layout/activity_listcategory.xml
@@ -5,19 +5,20 @@
         android:layout_height="match_parent"
         android:gravity="center">
 		
-		<TextView
-            android:paddingTop="10dp"
+		<TextView            
             android:id="@+id/category"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/setRange"
             android:layout_gravity="center"
-            android:textSize="30dp"/>
+            android:text="@string/setRange"            
+            android:textSize="30dp"
+            android:paddingBottom="30dp"
+            android:paddingTop="10dp" />
 		
         <ListView 
             android:id="@+id/list_category" 
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">            
+            android:layout_height="wrap_content" >            
         </ListView>
         
 </LinearLayout>
