--- a/MathBomb/res/layout/activity_startgame.xml
+++ b/MathBomb/res/layout/activity_startgame.xml
@@ -2,60 +2,68 @@
     android:layout_gravity="center"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent" >
 	
 	<TableLayout
 	    android:layout_width="match_parent"
 	    android:layout_height="wrap_content"   
-	    android:orientation="horizontal">
+	    android:orientation="horizontal"
+	    android:paddingBottom="50dp" >
+	    
 	    <TableRow>
 		    <TextView
 		        android:padding="10dp"
 		        android:id="@+id/score"
 		        android:layout_width="wrap_content"
 		        android:layout_height="wrap_content"
-		        android:text="@string/score"/>	    
-		    <TextView	           
-		        android:padding="30dp"
+		        android:text="@string/score"
+		        android:textStyle="bold" />	    
+		    <TextView
 		        android:id="@+id/showscore"
-		        android:layout_width="100dp"
-		        android:layout_height="wrap_content"/>
-		    <TextView
-		        android:padding="10dp"
-		        android:id="@+id/highscore"
-		        android:layout_width="wrap_content"
-		        android:layout_height="wrap_content"
-		        android:text="@string/highscore"/>	    
-		    <TextView
-		        android:padding="30dp"
-		        android:id="@+id/showhighscore"
-		        android:layout_width="wrap_content"
-		        android:layout_height="wrap_content"/>		    
+		        android:layout_width="50dp"
+		        android:layout_height="wrap_content" />	
+		    	    	    
 		   <TextView	        
 		        android:padding="10dp"
 		        android:id="@+id/time"
 		        android:layout_width="wrap_content"
 		        android:layout_height="wrap_content"
-		        android:text="@string/timeleft"/>   
+		        android:text="@string/timeleft"
+		        android:textStyle="bold" />   
 		    <TextView	        
-		        android:padding="30dp"
 		        android:id="@+id/showtimeleft"
 		        android:layout_width="wrap_content"
-		        android:layout_height="wrap_content"/>	    	        
+		        android:layout_height="wrap_content" />	    	        
 	    </TableRow>
+	    
+	    <TableRow>
+		    <TextView
+			        android:padding="10dp"
+			        android:id="@+id/highscore"
+			        android:layout_width="wrap_content"
+			        android:layout_height="wrap_content"
+			        android:text="@string/highscore"
+			        android:textStyle="bold" />	    
+		    <TextView
+		        android:id="@+id/showhighscore"
+		        android:layout_width="wrap_content"
+		        android:layout_height="wrap_content" />	
+		 </TableRow>
+		 
 	</TableLayout>
    
     <RelativeLayout 
             android:gravity="center"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="10dp">        
+            android:padding="10dp" >  
+                  
 	     <TextView
 		    android:id="@+id/integer1"
 		    android:layout_width="wrap_content"
 		    android:layout_height="wrap_content" 
 		    android:padding="5dp"
-		    android:textSize="50dp"/>		    
+		    android:textSize="50dp" />		    
 		 <TextView
 		    android:layout_toRightOf="@id/integer1"
 		    android:id="@+id/operator"
@@ -69,7 +77,8 @@
 		    android:layout_width="wrap_content"
 		    android:layout_height="wrap_content"
 		    android:padding="5dp"
-		    android:textSize="50dp" />		             
+		    android:textSize="50dp" />	
+		    	             
     </RelativeLayout>
 	
 	<TextView
@@ -84,29 +93,40 @@
 	<RelativeLayout
 	        android:layout_width="match_parent"
 	        android:layout_height="wrap_content"
-	        android:gravity="center">	    
+	        android:gravity="center" >	   
+	         
 		    <Button
 		        android:layout_alignParentBottom="true"
 		        android:id="@+id/choice1"
 		        android:layout_width="50dp"
-		        android:layout_height="wrap_content"/>		    
+		        android:layout_height="wrap_content" 
+		        android:textSize="20dp"
+		        android:padding="10dp" />		    
 		    <Button
 		        android:layout_alignParentBottom="true"
 		        android:id="@+id/choice2"
 		        android:layout_toRightOf="@id/choice1"
 		        android:layout_width="50dp"
-		        android:layout_height="wrap_content"/>		    
+		        android:layout_height="wrap_content"
+		        android:textSize="20dp"
+		        android:padding="10dp" />		    
 		    <Button
 		        android:layout_alignParentBottom="true"
 		        android:id="@+id/choice3"
 		        android:layout_toRightOf="@id/choice2"
 		        android:layout_width="50dp"
-		        android:layout_height="wrap_content"/>		    
+		        android:layout_height="wrap_content"
+		        android:textSize="20dp"
+		        android:padding="10dp" />		    
 		     <Button
 		        android:layout_alignParentBottom="true"
 		        android:id="@+id/choice4"
 		        android:layout_toRightOf="@id/choice3"
 		        android:layout_width="50dp"
-		        android:layout_height="wrap_content"/>
+		        android:layout_height="wrap_content"
+		        android:textSize="20dp"
+		        android:padding="10dp" />
+		     
 	</RelativeLayout>
+	
 </LinearLayout>
